@@ -1,5 +1,10 @@
 2004-07-17  Andrew Cagney  <cagney@gnu.org>
 
+	* hppa-linux-nat.c: Do not include <string.h>.
+	(supply_fpregset): Remove "register" attribute.
+
+2004-07-17  Andrew Cagney  <cagney@gnu.org>
+
 	* solib-frv.c (fetch_loadmap): Use xfree, not free.
 
 2004-07-17  Mark Kettenis  <kettenis@gnu.org>
